8375362: deadlock with unmount of suspended virtual thread interrupting another virtual thread